@@ -268,6 +268,11 @@ Library
 - Issue #26873: xmlrpc now raises ResponseError on unsupported type tags
   instead of silently return incorrect result.
 
+- Issue #26915:  The __contains__ methods in the collections ABCs now check
+  for identity before checking equality.  This better matches the behavior
+  of the concrete classes, allows sensible handling of NaNs, and makes it
+  easier to reason about container invariants.
+
 - Issue #26711: Fixed the comparison of plistlib.Data with other types.
 
 - Issue #24114: Fix an uninitialized variable in `ctypes.util`.
